# Antlr_Pascal

./: CMakeLists.txt  README.md  antlr.bat  input.txt  main.cpp  mygrammar2.g4
parser/: mygrammar2.interp  mygrammar2.tokens  mygrammar2BaseVisitor.cpp  mygrammar2BaseVisitor.h  mygrammar2Lexer.cpp  mygrammar2Lexer.h  mygrammar2Lexer.interp  mygrammar2Parser.cpp  mygrammar2Parser.h  mygrammar2Visitor.cpp  mygrammar2Visitor.h
